Fix collapsing whitespace

--- a/assets/game.css
+++ b/assets/game.css
@@ -34,6 +34,10 @@ input:focus {
     display:inline-block;
 }
 
+#fakeinputtext {
+    white-space: pre;
+}
+
 #caret {
     width: 9px;
     height: 20px;
